# mindbox

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
docker/: docker-entrypoint.sh  supervisord.conf
docs/: mindbox-system-design.md
mindbox-cli/: Cargo.toml
mindbox-cli/src/: client.rs  main.rs  ui.rs
mindbox-cli/src/commands/: mod.rs  project.rs  sandbox.rs  task.rs
mindbox-cli/src/tui/: app.rs  event.rs  mod.rs  render.rs
mindbox-common/: Cargo.toml
mindbox-common/src/: config.rs  error.rs  lib.rs  log_format.rs  types.rs
mindbox-kernel/: Cargo.toml
mindbox-kernel/src/: agent_instructions.rs  callback.rs  claude_code.rs  codex.rs  kernel_agent.md  lib.rs  mock.rs  prompt.rs  skill_matcher.rs
mindbox-server/: Cargo.toml
mindbox-server/src/: error.rs  main.rs  state.rs
mindbox-server/src/routes/: artifacts.rs  logs.rs  mod.rs  projects.rs  status.rs  system.rs  tasks.rs
mindbox-server/src/services/: mod.rs  project_service.rs  system_monitor.rs  task_lock.rs  task_service.rs
mindbox-skills/gpu-discovery-skill/: SKILL.md
mindbox-skills/gpu-discovery-skill/scripts/: detect_gpu.py
mindbox-skills/object-detection/: SKILL.md
mindbox-skills/object-detection-skill/: SKILL.md
mindbox-skills/object-detection-skill/references/: data-formats.md  hyperparameters.md  model-selection.md  troubleshooting.md
mindbox-skills/object-detection-skill/scripts/: requirements.txt
