[package]
name = "mindbox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
futures.workspace = true
mindbox-common = { path = "../mindbox-common" }
ratatui.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
serde_json.workspace = true
tokio.workspace = true
