[package]
name = "mindbox-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
mindbox-common = { path = "../mindbox-common" }
mindbox-kernel = { path = "../mindbox-kernel" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
